--- a/src/Mobile.scss
+++ b/src/Mobile.scss
@@ -1,7 +1,7 @@
 @media only screen and (min-device-width: 220px) and (max-device-width: 767px) {
   .hero {
     padding: $xh;
-    flex: 1 0 80%;
+    flex: 1 0 100%;
     h2 {
       font: {
         size: $xxl;
